librp-sys/src/bindings.rs

extern "C" {
    #[doc = " Sets trigger source.\n @param channel Channel A or B for witch we want to set trigger source.\n @param src Trigger source (INTERNAL, EXTERNAL_PE, EXTERNAL_NE, GATED_BURST).\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_GenTriggerSource(channel: rp_channel_t, src: rp_trig_src_t) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Gets trigger source.\n @param channel Channel A or B for witch we want to get burst period.\n @param src Pointer where value will be returned.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_GenGetTriggerSource(
        channel: rp_channel_t,
        src: *mut rp_trig_src_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " The generator is reset on both channels.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_GenSynchronise() -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " The generator is reset on channels.\n @param channel Channel A or B\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_GenResetTrigger(channel: rp_channel_t) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Emit trigger for selected channel\n @param channel Channel A or B\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_GenTriggerOnly(channel: rp_channel_t) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn rp_CmnCnvCntToV(
        field_len: u32,
        cnts: u32,
        adc_max_v: f32,
        calibScale: u32,
        calib_dc_off: ::std::os::raw::c_int,
        user_dc_off: f32,
    ) -> f32;
}
extern "C" {
    pub fn rp_jmd_AcqGetRawBuffer(channel: rp_channel_t) -> *const u32;
}
